--- a/src/pages/private/vehicles/Vehicle.scss
+++ b/src/pages/private/vehicles/Vehicle.scss
@@ -16,7 +16,25 @@
     gap: 10px;
     .filter {
       display: flex;
+      align-items: center;
       gap: 10px;
+      .warn{
+        color:#f59e0b;
+        background-color: #fff3cd;
+        font-size: 16px;
+        padding:14px;
+        height: 47px;
+        border-radius:10px;
+        display: flex;
+        align-items: center;
+        gap:5px;
+        font-weight: 600;
+        svg{
+          width: 25px;
+          height: 25px;
+          stroke-width: 2;
+        }
+      }
     }
   }
   .avehicle_container {
